@@ -17,9 +17,9 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://ulaf-ste.com","https://ulaf-ste.com/auth","https://ulaf-ste.com/admin","https://ulaf-ste.com/admin/orders")); // Adjust the allowed origin for your frontend app
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE")); // Specify the allowed HTTP methods
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Specify allowed headers
+        configuration.setAllowedOrigins(List.of("https://ulaf-ste.com/admin/orders","https://ulaf-ste.com/admin","https://ulaf-ste.com/auth","https://ulaf-ste.com")); // Adjust the allowed origin for your frontend app
+        configuration.setAllowedMethods(Arrays.asList("*")); // Specify the allowed HTTP methods
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Specify allowed headers
 
         // You can also configure additional settings, such as max age and expose headers
         configuration.setMaxAge(3600L); // Max age of the CORS pre-flight request
